# class_elective_advisor

./: .env.example  .gitignore  courses.json  pyproject.toml
ai_integration/: ai_module.py
database/: README.md  db_operations.py  db_setup.py
db/: electives.db  smart_elective_advisor.db
source/: conf.py  index.rst  modules.rst
ui/: gui.py
utilities/: logger_setup.py
